...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I4U-rA-btG">
                                <rect key="frame" x="253" y="63" width="51" height="31"/>
                                <state key="normal" title="Update"/>
                                <connections>
                                    <action selector="startDateBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="24I-MR-qfU"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pZk-bB-FiJ">
                                <rect key="frame" x="253" y="96" width="51" height="37"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="gry-dp-TEW" id="Zc1-s1-WTR"/>
                            <outlet property="delegate" destination="gry-dp-TEW" id="lJB-KG-6zx"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Books" id="2Tf-bq-SDZ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="cki-be-mQ6">
                            <connections>
                                <segue destination="sSw-Rr-E4c" kind="popoverPresentation" popoverAnchorBarButtonItem="cki-be-mQ6" id="6GN-UX-gFx">
                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                </segue>
                            </connections>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="ZTX-4P-X0U" id="9uw-ri-hJI"/>
                            <outlet property="delegate" destination="ZTX-4P-X0U" id="nyd-fz-PvZ"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Search Books" id="gzY-nA-45p">
                        <barButtonItem key="backBarButtonItem" title="Search Books" id="Vr7-ln-Mpy"/>
                    </navigationItem>
                    <connections>
                        <outlet property="searchBar" destination="aZu-3p-lzy" id="cHX-Fc-KMA"/>
                        <outlet property="tableView" destination="ook-xG-flC" id="AWh-xP-PRr"/>
                    </connections>
...
                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" tag="1005" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rwj-VN-XZz">
                                                    <rect key="frame" x="237" y="62" width="35" height="35"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <state key="normal" backgroundImage="plus"/>
                                                    <connections>
                                                        <action selector="addBookButton:" destination="sSw-Rr-E4c" eventType="touchUpInside" id="hi8-dt-KoP"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
