...
        loadBooks()
        loadFavouriteBooks()
        loadApiBooks()
    }

    mutating func loadApiBooks() {
        let book1 = Book(title: "Love Real Food", author: "Kathryn Taylor", totalPages: 435, currentPage: 0, photo: UIImage(named: "lrf"), isbn: "896373264373343", publisher: "Goodreads", description: "Learn to eat well with more than 100 approachable and delicious meatless recipes designed for everyone—vegetarians, vegans, and meat-eaters alike—with substitutions to make meals special diet–friend
        BookDataViewModel.apiBooks.append(book1)

        let book2 = Book(title: "Curse of Strahd (Dungeons & Dragons) ", author: "Wizards RPG Team", totalPages: 567, currentPage: 0, photo: UIImage(named: "cos"), isbn: "67392358325352", publisher: "Goodreads", description: "Under raging storm clouds, the vampire Count Strahd von Zarovich stands silhouetted against the ancient walls of Castle Ravenloft. Rumbling thunder pounds the castle spires. 
        BookDataViewModel.apiBooks.append(book2)

        let book3 = Book(title: "If Animals Kissed Good Night", author: "Ann Whitford Paul", totalPages: 245, currentPage: 0, photo: UIImage(named: "iakgn"), isbn: "6574839348577", publisher: "Goodreads", description: "What if animals did what YOU do? This bestselling story imagines how animals would kiss their loved ones good night! If animals kissed good night like we do...how would they do it? 
...


    mutating func loadBooks() {
        let book1 = Book(title: "Horus Rising", author: "Dan Abnett", totalPages: 416, currentPage: 0, photo: UIImage(named: "sample"), isbn: "97818844162949", publisher: "Goodreads", description: "At the dawn of the 31st millennium, the Imperium of Man has reasserted its dominance over the galaxy. It is a golden age of rediscovery and conquest, and the Emperor's Great Crusade has placed his super
        BookDataViewModel.books.append(book1)

        let book2 = Book(title: "Gone with the Wind", author: "Margaret Mitchell", totalPages: 321, currentPage: 0, photo: UIImage(named: "gone"), isbn: "32674754745745", publisher: "Goodreads", description: "American classic in which a manipulative woman and a roguish man carry on a turbulent love affair in the American south during the Civil War and Reconstruction.")!
        BookDataViewModel.books.append(book2)

        let book3 = Book(title: "Essays", author: "George Orwell", totalPages: 456, currentPage: 0, photo: UIImage(named: "essays"), isbn: "234786865865", publisher: "Goodreads", description: "Eric Arthur Blair, known by his pen name George Orwell, was an English novelist, essayist, journalist and critic. His work is characterised by lucid prose, biting social criticism, opposition to totalitarian
        BookDataViewModel.books.append(book3)

        let book4 = Book(title: "Cloud Computing", author: "John Smith", totalPages: 543, currentPage: 0, photo: UIImage(named: "cloud"), isbn: "23434647427547", publisher: "Goodreads", description: "Cloud computing is the on-demand availability of computer system resources, especially data storage and computing power, without direct active management by the user. The term is generally used to des
...
